# fiboa-sda

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: aws-deploy.yaml  publish.yaml
fiboa_sda/: cli.py  ingest.py  logger.py  metrics.py  settings.py
infra/: app.py
infra/aws/: fiboa_sda.py
infra/lambda-image/: Dockerfile  main.py
