[tool.poetry]
name = "fiboa-sda"
version = "0.1.0"
description = ""
authors = ["Jeff Albrecht <geospatialjeff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopandas = "==1.0.1"
pandas = "==2.2.3"
pyarrow = "==18.1.0"
boto3 = "^1.10.9"
google-cloud-bigquery = "^3.30.0"
obstore = "^0.5.1"
fsspec = "^2025.3.0"
requests = "^2.32.2"
tenacity = "^9.0.0"
pyproj = "^3.7.1"
utm = "^0.8.1"
numpy = "^2.2.4"
click = "^8.1.8"
pydantic_settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fiboa-sda = "fiboa_sda.cli:app"